# cubelister

./: .gitignore  .hgignore  .travis.yml  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.am.template  Makefile.cvs  README.md  autogen.sh  clean_all_temporary.sh  cleanup.sh  configure.ac.template  configure.in  configure.in.in  configure.in.template  create_flags_header.sh  csl.kdevelop  csl.kdevses  csl.nsi  csl.sln  cslcli.cpp  fix_xpm.sh  latest.txt  profile.bat
data/: Makefile.am  csl.desktop  csl.desktop.in  csl.protocol  csl_start_sb.ogz  update_geoip.sh
data/maps/: Makefile.am
data/maps/Sauerbraten/: Makefile.am  akroseum.cfg  asteroids.cfg  berlin_wall.cfg  c_egypt.cfg  c_valley.cfg  capture_night.cfg  corruption.cfg  duomo.cfg  face-capture.cfg  fb-capture.cfg  fb_capture.cfg  fc3.cfg  frostbyte.cfg  hades.cfg  hallo.cfg  hog2.cfg  lostinspace.cfg  mach2.cfg  monastery.cfg  nevil_c.cfg  nmp4.cfg  nmp8.cfg  nmp8_c.cfg  nmp9.cfg  ogrosupply.cfg  paradigm.cfg  paradiselost.cfg  ph-capture.cfg  reissen.cfg  relic.cfg  river_c.cfg  serenity.cfg  shipwreck.cfg  tejen.cfg  urban_c.cfg  venice.cfg
data/maps/Sauerbraten/254/: Makefile.am
data/maps/Sauerbraten/256/: Makefile.am
patches/extinfo/sauerbraten-20070904-extinfo_v101/: fpsserver.h  igame.h  sauerbraten-20070904-extinfo_v101.diff  server.cpp  stubs.h
po/: Makevars  POTFILES.in  cs.po  de.po  nl.po
po-engine/: POTFILES.in  cs.po  de.po  nl.po
src/: CslApp.cpp  CslApp.h  CslArt.cpp  CslArt.h  CslConnectionState.cpp  CslConnectionState.h  CslDlgAbout.cpp  CslDlgAbout.h  CslDlgAddMaster.cpp  CslDlgAddMaster.h  CslDlgAddServer.cpp  CslDlgAddServer.h  CslDlgConnectPass.cpp  CslDlgConnectPass.h  CslDlgConnectWait.cpp  CslDlgConnectWait.h  CslDlgExtended.cpp  CslDlgExtended.h  CslDlgGeneric.h  CslDlgOutput.cpp  CslDlgOutput.h  CslDlgSettings.cpp  CslDlgSettings.h  CslDlgTraffic.cpp  CslDlgTraffic.h  CslEngine.cpp  CslEngine.h  CslExtendedInfo.cpp  CslExtendedInfo.h  CslFlags.h  CslFrame.cpp  CslFrame.h  CslGame.cpp  CslGame.h  CslGameConnection.cpp  CslGameConnection.h  CslGameProcess.cpp  CslGameProcess.h  CslGeoIP.cpp  CslGeoIP.h  (+75 more)
src/cslmapcfgtool/: CslMapCfgTool.cpp  CslMapCfgTool.h  Makefile.am  mapcfgtool.wxg
src/engine/: CslCharEncoding.cpp  CslCharEncoding.h  CslDNSResolver.cpp  CslDNSResolver.h  CslEngine.cpp  CslEngine.h  CslExtendedInfo.cpp  CslExtendedInfo.h  CslGame.cpp  CslGame.h  CslGameAssaultCube.cpp  CslGameAssaultCube.h  CslGameBloodFrontier.cpp  CslGameBloodFrontier.h  CslGameCube.cpp  CslGameCube.h  CslGameSauerbraten.cpp  CslGameSauerbraten.h  CslTools.cpp  CslTools.h  CslUDP.cpp  CslUDP.h  CslVersion.h  Makefile.am  Makefile.am.nogui  cslengine.vcxproj  cslengine.vcxproj.filters  cube_tools.h  engine.vcproj  tools.vcproj
src/engine/tools/: CslCharEncoding.cpp  CslCharEncoding.h  CslCubeEngineTools.cpp  CslCubeEngineTools.h  CslDynlib.h  CslIPV4Addr.cpp  CslIPV4Addr.h  CslProtocolInput.cpp  CslProtocolInput.h  CslTools.cpp  CslTools.h  Makefile.am  csltools.vcxproj  csltools.vcxproj.filters
src/img/: about_16.xpm  ac_16.xpm  ac_16_png.h  ac_24.xpm  ac_24_png.h  ac_32.xpm  ac_ext_16.xpm  add_16.xpm  bf_16.xpm  bf_16_png.h  bf_24.xpm  bf_24_png.h  bf_ext_16.xpm  cb_16.xpm  cb_16_png.h  cb_24.xpm  cb_24_png.h  cb_ext_16.xpm  close_14.xpm  close_high_14.xpm  close_press_14.xpm  connect_16.xpm  connect_pw_16.xpm  csl_128.xpm  csl_16.xpm  csl_16_png.h  csl_22.xpm  csl_24.xpm  csl_24_png.h  csl_256_png.h  csl_32.xpm  csl_48_png.h  csl_64.xpm  csl_mac.icns  csl_wizard_png.h  delete_16.xpm  ext_green_8.xpm  ext_green_8_png.h  extinfo_default_16.xpm  extinfo_micro_16.xpm  (+39 more)
src/img/flags/: ad.xpm  ae.xpm  af.xpm  ag.xpm  ai.xpm  al.xpm  am.xpm  an.xpm  ao.xpm  aq.xpm  ar.xpm  as.xpm  at.xpm  au.xpm  aw.xpm  ax.xpm  az.xpm  ba.xpm  bb.xpm  bd.xpm  be.xpm  bf.xpm  bg.xpm  bh.xpm  bi.xpm  bj.xpm  bm.xpm  bn.xpm  bo.xpm  br.xpm  bs.xpm  bt.xpm  bv.xpm  bw.xpm  by.xpm  bz.xpm  ca.xpm  cc.xpm  cd.xpm  cf.xpm  (+212 more)
src/img/flags/win/: ad.xpm  ae.xpm  af.xpm  ag.xpm  ai.xpm  al.xpm  am.xpm  an.xpm  ao.xpm  aq.xpm  ar.xpm  as.xpm  at.xpm  au.xpm  aw.xpm  ax.xpm  az.xpm  ba.xpm  bb.xpm  bd.xpm  be.xpm  bf.xpm  bg.xpm  bh.xpm  bi.xpm  bj.xpm  bm.xpm  bn.xpm  bo.xpm  br.xpm  bs.xpm  bt.xpm  bv.xpm  bw.xpm  by.xpm  bz.xpm  ca.xpm  cc.xpm  cd.xpm  cf.xpm  (+209 more)
src/irc/: CslIRCEngine.cpp  CslIRCEngine.h  Makefile.am
src/irc/libircclient/: Makefile.am
src/irc/libircclient/include/: Makefile.am  config.h.in  config.h.mac
src/irc/libircclient/src/: Makefile.am  libircclient.c  libirclient.vcproj
src/libGeoIP/: GeoIPInternal.c  Makefile.am  libgeoip.vcproj
src/pch/: Csl.h  Makefile.am  dummy.cpp  pch.cpp
src/plugin/: CslPlugin.cpp  CslPlugin.h  Makefile.am  cslplugin.vcxproj  cslplugin.vcxproj.filters
src/plugins/: Makefile.am  Makefile.am.in  Makefile.am.template
src/plugins/assaultcube/: CslGameAssaultCube.cpp  CslGameAssaultCube.h  Makefile.am  assaultcube.vcxproj  assaultcube.vcxproj.filters
src/plugins/assaultcube/po/: POTFILES.in
src/plugins/cube/: CslGameCube.cpp  CslGameCube.h  Makefile.am  cube.vcxproj  cube.vcxproj.filters
src/plugins/cube/po/: POTFILES.in
src/plugins/redeclipse/: CslGameRedEclipse.cpp  CslGameRedEclipse.h  Makefile.am  redeclipse.vcxproj  redeclipse.vcxproj.filters
src/plugins/redeclipse/po/: POTFILES.in
src/plugins/sauerbraten/: CslGameSauerbraten.cpp  CslGameSauerbraten.h  Makefile.am  sauerbraten.vcxproj  sauerbraten.vcxproj.filters
src/plugins/sauerbraten/po/: POTFILES.in
src/plugins/tesseract/: CslGameTesseract.cpp  CslGameTesseract.h  Makefile.am  tesseract.vcxproj  tesseract.vcxproj.filters
src/plugins/tesseract/po/: POTFILES.in
src/tools/: CslArt.cpp  CslArt.h  CslFileDirPicker.cpp  CslFileDirPicker.h  CslGeoIP.cpp  CslGeoIP.h  CslGuiTools.cpp  CslGuiTools.h  CslListCtrl.cpp  CslListCtrl.h  CslMenu.cpp  CslMenu.h  CslPanelMap.cpp  CslPanelMap.h  CslTTS.cpp  CslTTS.h  CslToolTip.cpp  CslToolTip.h  Makefile.am  cslguitools.vcxproj  cslguitools.vcxproj.filters
xcode/: config.h.xcode  csl-Info.plist  pbsetup.sh
xcode/csl.xcodeproj/: project.pbxproj
