csldatadir =	$(datadir)/csl/maps/Sauerbraten
csldata_DATA = c_valley.cfg corruption.cfg face-capture.cfg fb_capture.cfg \
	hades.cfg lostinspace.cfg nevil_c.cfg nmp4.cfg nmp8_c.cfg nmp9.cfg paradigm.cfg \
	ph-capture.cfg river_c.cfg serenity.cfg urban_c.cfg

EXTRA_DIST = $(csldata_DATA)
SUBDIRS = 254
