csldatadir = $(pkgdatadir)/data/maps/Sauerbraten
csldata_DATA = akroseum.cfg asteroids.cfg berlin_wall.cfg c_egypt.cfg \
	c_valley.cfg capture_night.cfg corruption.cfg duomo.cfg face-capture.cfg \
	fb_capture.cfg fc3.cfg frostbyte.cfg hades.cfg hallo.cfg hog2.cfg lostinspace.cfg \
	monastery.cfg nevil_c.cfg nmp4.cfg nmp8.cfg nmp8_c.cfg nmp9.cfg ogrosupply.cfg \
	paradigm.cfg paradiselost.cfg ph-capture.cfg reissen.cfg relic.cfg river_c.cfg \
	serenity.cfg tejen.cfg urban_c.cfg venice.cfg

EXTRA_DIST = $(csldata_DATA)
SUBDIRS = 254 256
