INCLUDES = -I$(top_srcdir)/src/engine -I$(top_srcdir)/src/tools \
	-I$(top_builddir)/src/pch

METASOURCES = AUTO
lib_LTLIBRARIES = libcsltools.la
libcsltools_la_SOURCES = CslCharEncoding.cpp CslIPV4Addr.cpp \
	CslTools.cpp CslCubeEngineTools.cpp
include_HEADERS = CslCharEncoding.h CslCubeEngineTools.h CslDynlib.h \
	CslIPV4Addr.h CslTools.h
