csldatadir =	$(datadir)/csl/maps/Sauerbraten/256

EXTRA_DIST = $(csldata_DATA)
csldata_DATA = akroseum.png asteroids.png berlin_wall.png c_egypt.png \
	c_valley.png capture_night.png duomo.png fc3.png frostbyte.png hallo.png hog2.png \
	mach2.png monastery.png nmp4.png nmp8.png ogrosupply.png paradiselost.png \
	reissen.png relic.png shipwreck.png tejen.png venice.png wdcd.png
